# poeticon

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/conf/: activityInterface.ini  affExploreManager.ini  config  dbdummy.ini  dbhands.ini  memory.ini
app/lua/: poeticon_funcs.lua  poeticon_interact_fsm.lua  poeticon_main.lua  poeticon_root_fsm.lua
app/scripts/: affordancesExploration.xml.template  blobSpotter.xml.template  classifyRoi.xml.template  debug_worldStateManager.xml.template  debug_world_state_dummy.xml.template  debug_world_state_perception.xml.template  dummy_poeticon++.xml.template  iol_poeticon.xml.template  poeticon++_demo.xml.template  poeticon++_dummy_mode.xml  poeticon++_dummy_mode.xml.template  poeticon++_perception_mode-cpp.xml.template  poeticon++_perception_mode-py.xml.template  poeticon++_perception_mode.xml  poeticon++_perception_mode.xml.template  segmentation.xml.template
src/: CMakeLists.txt
src/activeSegmentation/: CMakeLists.txt
src/activeSegmentation/app/: CMakeLists.txt
src/activeSegmentation/app/scripts/: activeParticleSeg.xml.template
src/activeSegmentation/src/: CMakeLists.txt
src/activeSegmentation/src/module/: CMakeLists.txt
src/activityInterface/: CMakeLists.txt  activityInterface.thrift  activityInterface_thrift.cmake
src/activityInterface/app/: CMakeLists.txt
src/activityInterface/include/: activityInterface.h  activityInterface_IDLServer.h  memoryReporter.h
src/activityInterface/src/: activityInterface.cpp  activityInterface_IDLServer.cpp  main.cpp  memoryReporter.cpp
src/affExploreManager/: CMakeLists.txt  CMakeLists.txt~
src/affExploreManager/app/: CMakeLists.txt
src/affExploreManager/include/iCub/: module.h  utils.h
src/affExploreManager/src/: main.cpp  module.cpp
src/affNetwork/: README.md  getRanges.m  pca2ndVersion.mat  pca6mergecomp.mat  pca_2n_2C_noise_25b.mat  prediction.m
src/affNetwork/Data+combinator/: affData_03_2015_descEffNoise_25series_good.txt  affData_03_22_16.txt  affData_03_23_16.txt  affData_03_23_16_gaussian_noise.txt  combinator.m  combinatorWithNoise.m
src/affNetwork/Networks+listener/: discretize.m  pca_2016_2n_2c_2v.mat  pca_2016_2n_2c_2v_wGaussian002.mat  pca_2016_2n_2c_2v_wUniform002.mat  pca_2016_2n_2c_4v.mat  pca_2016_2n_2c_4v_wGaussian002.mat  pca_2016_2n_2c_4v_wUniform002.mat  pca_2n_2C.mat  pca_2n_3C.mat  prediction.m
src/affNetwork/Training_Network/: discretize.m  getRanges.m  pcaTrain_2N2C.m  pcaTrain_2N3C.m  pcaTrain_2n2c_2v.m  pcaTrain_2n2c_4v.m
src/affNetwork/oldStuff/: BDe_bn.mat  discretize.m  discretizeAfonso.m  original_bn.mat  pca2T-2O.mat  pcaNet-4mergeComp.mat  prediction.m  princomp.mat
src/blobDescriptor/: CMakeLists.txt
src/blobDescriptor/include/iCub/: BlobDescriptorModule.h  BlobDescriptorSupport.h
src/blobDescriptor/src/: BlobDescriptorMain.cpp  BlobDescriptorModule.cpp  BlobDescriptorSupport.cpp
src/blobSpotter/: CMakeLists.txt  blobSpotter.thrift
src/blobSpotter/include/: blobSpotter.h  colorhistogram.h  histogram.h  objectFinder.h
src/blobSpotter/src/: blobSpotter.cpp
src/dummyWorldStateManager/: CMakeLists.txt  dummyWorldStateManager.thrift  dummyWorldStateManager_thrift.cmake
src/dummyWorldStateManager/include/: DummyWorldStateMgrModule.h  DummyWorldStateMgrThread.h  DummyWorldStateMgr_IDL.h
src/dummyWorldStateManager/src/: DummyWorldStateMgrMain.cpp  DummyWorldStateMgrModule.cpp  DummyWorldStateMgrThread.cpp  DummyWorldStateMgr_IDL.cpp
src/opc2prada/: CMakeLists.txt  opc2prada.thrift  opc2prada_thrift.cmake
src/opc2prada/include/: OPC2PRADA_IDL.h  translator.h
src/opc2prada/src/: OPC2PRADA_IDL.cpp  main.cpp  translator.cpp
src/perspectiveChanger/: CMakeLists.txt
src/perspectiveChanger/include/: perspectiveChanger.h
src/perspectiveChanger/src/: main.cpp  perspectiveChanger.cpp
src/poeticon-simulation/: CMakeLists.txt  README.md
src/poeticon-simulation/app/: CMakeLists.txt
src/poeticon-simulation/app/conf/: dummy_activity_complex6_005.ini  dummy_activity_complex6_025.ini  dummy_activity_complex6_050.ini  dummy_activity_complex6_100.ini  dummy_activity_complex6_onearm_005.ini  dummy_activity_complex6_onearm_025.ini  dummy_activity_complex6_onearm_050.ini  dummy_activity_complex6_onearm_075.ini  (+14 more)
src/poeticon-simulation/src/: CMakeLists.txt
src/pradaPlanner/: CMakeLists.txt  affordance_communication.py  geometric_grounding.py  goal_imaginer.py  planning_cycle.py
src/pradaPlanner-cpp/: CMakeLists.txt
src/pradaPlanner-cpp/affordanceCommunication/: CMakeLists.txt
src/pradaPlanner-cpp/geometricGrounding/: CMakeLists.txt  geometric_grounding.cpp
src/pradaPlanner-cpp/goalCompiler/: CMakeLists.txt  goal_imaginer.cpp
src/pradaPlanner-cpp/planningCycle/: CMakeLists.txt  Planner.thrift  Planner_thrift.cmake  planningCycle.thrift  planningCycle_thrift.cmake
src/pradaPlanner-py/: affordance_communication.py  goal_imaginer.py  planning_cycle.py
src/praxiconInterface/: CMakeLists.txt
src/praxiconInterface/include/: PraxiconTreePortBinding.nsmap
src/praxiconInterface/src/: praxiconInterface.cpp  soapC.cpp  soapClient.cpp  stdsoap2.cpp
src/sequentialLabeller/: CMakeLists.txt  SequentialLabellerMain.cpp  SequentialLabellerModule.cpp  SequentialLabellerModule.h  cvSeqLabel.cpp  cvSeqLabel.h
src/slic/: CMakeLists.txt
src/slic/include/: SLICModule.h  SLICThread.h
src/slic/src/: SLICMain.cpp  SLICModule.cpp  SLICThread.cpp
src/worldStateManager/: CMakeLists.txt  worldStateManager.thrift  worldStateManager_thrift.cmake
src/worldStateManager/include/: Helpers.h  MemoryItem.h  MemoryItemHand.h  MemoryItemObj.h  WorldStateMgrModule.h  WorldStateMgrThread.h  WorldStateMgr_IDL.h
src/worldStateManager/src/: Helpers.cpp  WorldStateMgrMain.cpp  WorldStateMgrModule.cpp  WorldStateMgrThread.cpp  WorldStateMgr_IDL.cpp
src/worldStateVisualizer/: CMakeLists.txt
src/worldStateVisualizer/include/: WorldStateVisualizerModule.h  WorldStateVisualizerThread.h
src/worldStateVisualizer/src/: WorldStateVisualizerMain.cpp  WorldStateVisualizerModule.cpp  WorldStateVisualizerThread.cpp
(+75 files in other folders)
